--- a/recipes/dumplings.html
+++ b/recipes/dumplings.html
@@ -8,8 +8,8 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Pork Dumpling Recipe</h1>
-    <img src="../img/dumpling.webp">
-    <p>Dumplings that will make you smake your Grandma</p>
+    <img src="../img/dumpling.webp" height="400" width="600">
+    <p>Dumplings that will make you smack your Grandma</p>
     <h2>Your going to need the following Ingredients</h2>
     <ul>
         <li>100 (3.5 inch square) wonton wrappers</li>
@@ -23,12 +23,19 @@
     </ul>
     <h2>Directions</h2>
     <ol>
-        <li>Whisk light soy sauce, dark soy sauce, red wine vinegar, 
-        chili oil, ginger, sugar, garlic, and green onion together in a 
-        bowl; pour into a sealable container, seal, and refrigerate 
-        1 hour.</li>
-        <li>Make some Dumplings to go with it</li>
-        <li>Enjoy!</li>
+        <li>Combine pork, ginger, garlic, green onion, soy sauce, 
+            sesame oil, egg and cabbage in a large bowl.<br> Stir until 
+            well mixed..</li>
+            <img src="../img/dumplingstep1.webp" height="200" width="300">
+        <li>Place 1 heaping teaspoon of pork filling in the center of each wonton wrapper.<br> 
+            Moisten edges with water and fold over to form a triangle. Press edges firmly to seal.<br> 
+            Keep filled dumplings covered with a damp towel to prevent drying out until ready to cook.</li>
+            <img src="../img/dumplingstep2.webp" height="200" width="300">
+        <li>Arrange dumplings in a covered bamboo or metal steamer lined with parchment,<br> 
+            making sure they're not touching to prevent them from sticking together; <br>
+            steam over simmering water until pork is cooked through, about 15 minutes.</li>
+            <img src="../img/dumplingstep3.webp" height="200" width="300">
+        <li>Serve hot and enjoy!</li>
     </ol>
 </body>
 </html>
