--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Lee's Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes according to Lee!</h1>
+    <h1> Lee's Recipes in accordance with Odin </h1>
     <ul>
     <li><a href="recipes/dumplingsauce.html">Dumpling Sauce </a></li>
+    <img src="img/dumplingsauce.webp" height="200" width="300">
     <li><a href="recipes/dumplings.html">Pork Dumpling </a></li>
+    <img src="img/dumpling.webp" height="200" width="300">
     </ul>
 </body>
 </html>
